--- a/people.html
+++ b/people.html
@@ -205,21 +205,21 @@
 
 
 <section id="staff">
-   <div class="row-fluid" style="display: flex; align-items: flex-start; padding-top: 30px;">
-      <div class="image-content" style="flex: 0 0 auto;">
-         <img src="thumbs/Photo_Quentin.jpeg" alt="Quentin Zhen QIN"  style="width: 200px; height: auto;"/>
+   <div class="row-fluid" style="display: flex; align-items: flex-start; padding-top: 30px; flex-wrap: wrap;">
+      <div class="image-content" style="flex: 0 0 auto; margin-right: 20px; width: 200px;">
+         <img src="thumbs/Photo_Quentin.jpeg" alt="Quentin Zhen QIN"  style="width: 100%; height: auto;"/>
       </div>
-      <div class="text-content" style="flex: 1;">
-         <h4 style="text-align: left; margin-top: 0; margin-left: 55px;">Quentin Zhen QIN 秦震 Ph.D.</h4>
-	 <p style="font-size: 18px; margin-bottom: 5px; margin-left: 55px;"><b>Principal Investigator</b></p>
-	 <p style="font-size: 18px; margin-top: 5px; margin-bottom: 5px; margin-left: 55px;">hmzqin@ust.hk; <a href="files/C.V._Zhen Qin_Research.pdf">CV</a></p>
-	 <p style="font-size: 18px; margin-bottom: 5px; margin-left: 55px; "><a href="https://sites.google.com/site/qinzhenquentin/">Personal Website</a></p>
-	 <p style="font-size: 18px; margin-left: 55px;">ORCID ID: <a href="https://orcid.org/0000-0002-6117-7809">https://orcid.org/0000-0002-6117-7809</a></p>
-         <p style="text-align: justify; margin-left: 55px;">Quentin is an Assistant Professor of Linguistics in the Division of Humanities at the Hong Kong University of Science and Technology. He is also Associate Director of ​Center for Chinese Linguistics and a faculty associate of Center for Aging Science, HKUST. He got his Ph.D degree in Linguistics from the <a href="https://linguistics.ku.edu/">Department of Linguistics</a>, University of Kansas. Prior to joining the faculty at HKUST, he worked as Postdoctoral Researcher at the Research Center for Language, Cognition, and Neuroscience, Hong Kong Polytechnic University.</p>
+      <div class="text-content" style="flex: 1; margin-bottom: 10px;">
+         <h4 style="text-align: left; margin-top: 0; ">Quentin Zhen QIN 秦震 Ph.D.</h4>
+	 <p style="font-size: 18px; margin-bottom: 5px; "><b>Principal Investigator</b></p>
+	 <p style="font-size: 18px; margin-top: 5px; margin-bottom: 5px; ">hmzqin@ust.hk; <a href="files/C.V._Zhen Qin_Research.pdf">CV</a></p>
+	 <p style="font-size: 18px; margin-bottom: 5px; "><a href="https://sites.google.com/site/qinzhenquentin/">Personal Website</a></p>
+	 <p style="font-size: 18px;">ORCID ID: <a href="https://orcid.org/0000-0002-6117-7809">https://orcid.org/0000-0002-6117-7809</a></p>
+         <p style="text-align: justify; ">Quentin is an Assistant Professor of Linguistics in the Division of Humanities at the Hong Kong University of Science and Technology. He is also Associate Director of ​Center for Chinese Linguistics and a faculty associate of Center for Aging Science, HKUST. He got his Ph.D degree in Linguistics from the <a href="https://linguistics.ku.edu/">Department of Linguistics</a>, University of Kansas. Prior to joining the faculty at HKUST, he worked as Postdoctoral Researcher at the Research Center for Language, Cognition, and Neuroscience, Hong Kong Polytechnic University.</p>
       </div>
    </div>
    <hr>
-   <div class="row-fluid" style="display: flex; align-items: flex-start; padding-top: 30px; flex-wrap: wrap;">
+   <div class="row-fluid" style="display: flex; align-items: flex-start; padding-top: 20px; flex-wrap: wrap;">
       <div class="image-content" style="flex: 0 0 auto; margin-right: 20px; width: 200px;">
          <img src="thumbs/Photo_Susu.jpg" alt="Susu Lai" style="width: 100%; height: auto;" >
       </div>
@@ -259,16 +259,16 @@
 </script>
 <hr>
 	
-   <div class="row-fluid" style="display: flex; align-items: flex-start; padding-top: 20px;">
-      <div class="image-content" style="flex: 0 0 auto;">
-         <img src="thumbs/Photo_Jiayu.jpg" alt="Jiayu Liang" style="width: 200px; height: auto;"/>
+   <div class="row-fluid" style="display: flex; align-items: flex-start; padding-top: 20px; flex-wrap: wrap;">
+      <div class="image-content" style="flex: 0 0 auto; margin-right: 20px; width: 200px;">
+         <img src="thumbs/Photo_Jiayu.jpg" alt="Jiayu Liang" style="width: 100%; height: auto;"/>
       </div>   
-      <div class="text-content" style="flex: 1;">
-         <h4 style="text-align: left; margin-top: 0; margin-left: 55px;">Jiayu LIANG 梁家瑜 (BA: Shandong U)</h4>
-	 <p style="font-size: 18px; margin-bottom: 5px; margin-left: 55px;"><b>Research Assistant</b></p>
-	 <p style="font-size: 18px; margin-top: 5px; margin-bottom: 5px; margin-left: 55px;">hmjyliang@ust.hk; <a href="https://www.researchgate.net/profile/Jiayu-Liang-14">ResearchGate</a>, <a href="files/CV_Jiayu LIANG.pdf">CV</a></p>
-         <p style="font-size: 18px; margin-top: 5px;margin-left: 55px; "><a href="https://lexie-liang.github.io/LiangJiayu.github.io/">Personal Website</a></p>
-         <p style="text-align: justify; margin-left: 55px;">Jiayu holds a BA in English from Shandong University. Her research interests focus on the production and perception of non-native languages, as well as the cross-domain transfer effects between music and language experience. For her undergraduate thesis, Jiayu employed eye-tracking methodology to investigate how Mandarin speakers' musical aptitude influences their perception and production of English vowels. Currently, she is involved in an eye-tracking study examining L2 learners' perceptual learning and consolidation of English lexical stress.</p>
+      <div class="text-content" style="flex: 1; margin-bottom: 10px;">
+         <h4 style="text-align: left; margin-top: 0; ">Jiayu LIANG 梁家瑜 (BA: Shandong U)</h4>
+	 <p style="font-size: 18px; margin-bottom: 5px; "><b>Research Assistant</b></p>
+	 <p style="font-size: 18px; margin-top: 5px; margin-bottom: 5px; ">hmjyliang@ust.hk; <a href="https://www.researchgate.net/profile/Jiayu-Liang-14">ResearchGate</a>, <a href="files/CV_Jiayu LIANG.pdf">CV</a></p>
+         <p style="font-size: 18px; margin-top: 5px;"><a href="https://lexie-liang.github.io/LiangJiayu.github.io/">Personal Website</a></p>
+         <p style="text-align: justify;">Jiayu holds a BA in English from Shandong University. Her research interests focus on the production and perception of non-native languages, as well as the cross-domain transfer effects between music and language experience. For her undergraduate thesis, Jiayu employed eye-tracking methodology to investigate how Mandarin speakers' musical aptitude influences their perception and production of English vowels. Currently, she is involved in an eye-tracking study examining L2 learners' perceptual learning and consolidation of English lexical stress.</p>
       </div>
    </div>
 </section>
@@ -276,26 +276,26 @@
 <hr>
 	
 <section id="student">
-   <div class="row-fluid" style="display: flex; align-items: flex-start; padding-top: 20px;">
-      <div class="image-content" style="flex: 0 0 auto;">
-         <img src="thumbs/Photo_Jeremy.jpg" alt="Jeremy, Yin To CHUI" style="width: 200px; height: auto;"/>
+   <div class="row-fluid" style="display: flex; align-items: flex-start; padding-top: 20px; flex-wrap: wrap;">
+      <div class="image-content" style="flex: 0 0 auto; margin-right: 20px; width: 200px;">
+         <img src="thumbs/Photo_Jeremy.jpg" alt="Jeremy, Yin To CHUI" style="width: 100%; height: auto;"/>
       </div>
-      <div class="text-content" style="flex: 1;">
-         <h4 style="text-align: left; margin-top: 0; margin-left: 55px;">Jeremy, Yin To CHUI 徐彥韜 (BA: CUHK; MA: PolyU; MPhil: UST)</h4>
-	 <p style="font-size: 18px; margin-bottom: 5px; margin-left: 55px;"><b>Ph.D Student (HKPFS awardee)</b></p>
-	 <p style="font-size: 18px; margin-top: 5px; margin-bottom: 5px; margin-left: 55px;">ytchuiac@connect.ust.hk; <a href="https://www.researchgate.net/profile/Yin-To-Chui">ResearchGate</a>, <a href="files/CV_Jeremy.pdf">CV</a></p>
-	 <p style="font-size: 18px; margin-top: 5px; margin-left: 55px;">ORCID ID: <a href="https://orcid.org/0000-0002-2169-086X">https://orcid.org/0000-0002-2169-086X</a></p>
-         <p style="text-align: justify; margin-left: 55px;">Jeremy graduated with an MA degree in Teaching Chinese as a Foreign Language from HK PolyU. He is interested in speech perception as well as the cognitive and computational mechanisms behind perceptual learning. Currently, he is working on whether, and to what extent, younger and older adults make statistical inferences (e.g., distributional information, word-referent co-occurrences) in the implicit perceptual learning L2 lexical tone categories. His previous MPhil project studied the statistical learning of Mandarin lexical tones and how individual differences played a role in learning. Jeremy's Ph.D study is funded by the <a href="https://cerg1.ugc.edu.hk/hkpfs/index.html">Hong Kong PhD Fellowship</a>.</p>
+      <div class="text-content" style="flex: 1; margin-bottom: 10px;">
+         <h4 style="text-align: left; margin-top: 0; ">Jeremy, Yin To CHUI 徐彥韜 (BA: CUHK; MA: PolyU; MPhil: UST)</h4>
+	 <p style="font-size: 18px; margin-bottom: 5px; "><b>Ph.D Student (HKPFS awardee)</b></p>
+	 <p style="font-size: 18px; margin-top: 5px; margin-bottom: 5px;">ytchuiac@connect.ust.hk; <a href="https://www.researchgate.net/profile/Yin-To-Chui">ResearchGate</a>, <a href="files/CV_Jeremy.pdf">CV</a></p>
+	 <p style="font-size: 18px; margin-top: 5px; ">ORCID ID: <a href="https://orcid.org/0000-0002-2169-086X">https://orcid.org/0000-0002-2169-086X</a></p>
+         <p style="text-align: justify; ">Jeremy graduated with an MA degree in Teaching Chinese as a Foreign Language from HK PolyU. He is interested in speech perception as well as the cognitive and computational mechanisms behind perceptual learning. Currently, he is working on whether, and to what extent, younger and older adults make statistical inferences (e.g., distributional information, word-referent co-occurrences) in the implicit perceptual learning L2 lexical tone categories. His previous MPhil project studied the statistical learning of Mandarin lexical tones and how individual differences played a role in learning. Jeremy's Ph.D study is funded by the <a href="https://cerg1.ugc.edu.hk/hkpfs/index.html">Hong Kong PhD Fellowship</a>.</p>
       </div>
    </div>
 
 <hr>
 	
-   <div class="row-fluid" style="display: flex; align-items: flex-start; padding-top: 20px;">
-      <div class="image-content" style="flex: 0 0 auto;">
-         <img src="thumbs/Photo_Yuqi.jpg" alt="Yuqi Wang" style="width: 200px; height: auto;"/>
+   <div class="row-fluid" style="display: flex; align-items: flex-start; padding-top: 20px; flex-wrap: wrap;">
+      <div class="image-content" style="flex: 0 0 auto; margin-right: 20px; width: 200px;">
+         <img src="thumbs/Photo_Yuqi.jpg" alt="Yuqi Wang" style="width: 100%; height: auto;"/>
       </div>   
-      <div class="text-content" style="flex: 1;">
+      <div class="text-content" style="flex: 1; margin-bottom: 10px;">
          <h4 style="text-align: left; margin-top: 0; margin-left: 55px;">Yuqi WANG 王宇琪 (BA: Tianjin U; MPhil: UST)</h4>
 	 <p style="font-size: 18px; margin-bottom: 5px; margin-left: 55px;"><b>Ph.D Student (HKPFS awardee)</b></p>
 	 <p style="font-size: 18px; margin-top: 5px; margin-bottom: 5px;margin-left: 55px;">ywangqi@connect.ust.hk; <a href="https://www.researchgate.net/profile/Yuqi-Wang-98">ResearchGate</a>, <a href="files/CV_Yuqi.pdf">CV</a></p>
@@ -306,9 +306,9 @@
 
 <hr>
 	
-   <div class="row-fluid" style="display: flex; align-items: flex-start; padding-top: 20px;">
-      <div class="image-content" style="flex: 0 0 auto;">
-         <img src="thumbs/Photo_Kangdi.jpg" alt="Kangdi Liu" style="width: 200px; height: auto;"/>
+   <div class="row-fluid" style="display: flex; align-items: flex-start; padding-top: 20px; flex-wrap: wrap;">
+      <div class="image-content" style="flex: 0 0 auto; margin-right: 20px; width: 200px;">
+         <img src="thumbs/Photo_Kangdi.jpg" alt="Kangdi Liu" style="width: 100%; height: auto;"/>
       </div>   
       <div class="text-content" style="flex: 1;">
          <h4 style="text-align: left; margin-top: 0; margin-left: 55px;">Kangdi LIU 劉康迪 (BA: NENU; MA: Nankai)</h4>
@@ -326,17 +326,17 @@
    <div class="row-fluid" style="text-align: center; padding-top: 10px;">
       <h4>Past Members and Alumni</h4>
    </div>
-   <div class="row-fluid" style="display: flex; align-items: flex-start; padding-top: 15px;">
-      <div class="image-content" style="flex: 0 0 auto;">
-         <img src="thumbs/Photo_Cindy.png" style="height:80%; width: 150px;" alt="Cindy, Rui JIN" style="margin-top: 0;"/>
+   <div class="row-fluid" style="display: flex; align-items: flex-start; padding-top: 15px; flex-wrap: wrap;">
+      <div class="image-content" style="flex: 0 0 auto; margin-right: 20px; width: 150px;">
+         <img src="thumbs/Photo_Cindy.png" style="width: 100%; height: auto;" alt="Cindy, Rui JIN" style="margin-top: 0;"/>
       </div>
       <div class="text-content" style="flex: 1;">
          <h4 style="text-align: left; margin-top: 0; margin-left: 102px; font-weight: normal; font-size: 18px;">· Cindy, Rui JIN 金蕊 (Senior Research Assistant, 2021-2022)</h4>
          <p style="text-align: justify; margin-left: 105px;">Cindy is currently a Ph.D student in Psychology at the University of Florida.</p>
       </div>
    </div>
-   <div class="row-fluid" style="display: flex; align-items: flex-start; padding-top: 15px;">
-      <div class="image-content" style="flex: 0 0 auto;">
+   <div class="row-fluid" style="display: flex; align-items: flex-start; padding-top: 15px; flex-wrap: wrap;">
+      <div class="image-content" style="flex: 0 0 auto; margin-right: 20px; width: 150px;">
          <img src="thumbs/Photo_Ruofan_edited.jpg"  style="height:80%; width: 150px;" alt="Ruofan Wu" style="margin-top: 0;"/>
       </div>
       <div class="text-content" style="flex: 1;">
