--- a/people.html
+++ b/people.html
@@ -221,6 +221,20 @@
    <hr>
    <div class="row-fluid" style="display: flex; align-items: flex-start; padding-top: 20px; flex-wrap: wrap;">
       <div class="image-content" style="flex: 0 0 auto; margin-right: 20px; width: 200px;">
+         <img src="thumbs/Photo_Quentin.jpeg" alt="Quentin Zhen QIN" style="width: 100%; height: auto;"/ >
+      </div>
+      <div class="text-content" style="flex: 1; margin-bottom: 10px;">
+         <h4 style="text-align: left; margin-top: 0;">Quentin Zhen QIN 秦震 Ph.D.</h4>
+	 <p style="font-size: 18px; margin-bottom: 5px;" ><b>Principal Investigator</b></p>
+	 <p style="font-size: 18px; margin-top: 5px;" >hmzqin@ust.hk; <a href="files/C.V._Zhen Qin_Research.pdf">CV</a></p>
+	 <p style="font-size: 18px; margin-bottom: 5px; "><a href="https://sites.google.com/site/qinzhenquentin/">Personal Website</a></p>
+	 <p style="font-size: 18px;text-align: justify;">ORCID ID: <a href="https://orcid.org/0000-0002-6117-7809">https://orcid.org/0000-0002-6117-7809</a></p>
+         <p style="text-align: justify;">Quentin is an Assistant Professor of Linguistics in the Division of Humanities at the Hong Kong University of Science and Technology. He is also Associate Director of ​Center for Chinese Linguistics and a faculty associate of Center for Aging Science, HKUST. He got his Ph.D degree in Linguistics from the <a href="https://linguistics.ku.edu/">Department of Linguistics</a>, University of Kansas. Prior to joining the faculty at HKUST, he worked as Postdoctoral Researcher at the Research Center for Language, Cognition, and Neuroscience, Hong Kong Polytechnic University.</p>
+      </div>
+   </div>
+
+   <div class="row-fluid" style="display: flex; align-items: flex-start; padding-top: 20px; flex-wrap: wrap;">
+      <div class="image-content" style="flex: 0 0 auto; margin-right: 20px; width: 200px;">
          <img src="thumbs/Photo_Susu.jpg" alt="Susu Lai" style="width: 100%; height: auto;"/ >
       </div>
       <div class="text-content" style="flex: 1; margin-bottom: 10px;">
