--- a/people.html
+++ b/people.html
@@ -330,20 +330,20 @@
    </div>
    <div class="row-fluid" style="display: flex; align-items: flex-start; padding-top: 15px; flex-wrap: wrap;">
       <div class="image-content" style="flex: 0 0 auto; margin-right: 20px; width: 200px;">
-         <img src="thumbs/Photo_Cindy.png" style="width: 100%; height: auto;" alt="Cindy, Rui JIN" style="margin-top: 0;"/>
+         <img src="thumbs/Photo_Cindy.png"  alt="Cindy, Rui JIN" style="width: 100%; height: auto;"/>
       </div>
       <div class="text-content" style="flex: 1;">
          <h4 style="text-align: left; margin-top: 0; font-weight: normal; font-size: 18px;">· Cindy, Rui JIN 金蕊 (Senior Research Assistant, 2021-2022)</h4>
-         <p style="text-align: justify;margin-left: 70px;">Cindy is currently a Ph.D student in Psychology at the University of Florida.</p>
+         <p style="text-align: justify;">Cindy is currently a Ph.D student in Psychology at the University of Florida.</p>
       </div>
    </div>
    <div class="row-fluid" style="display: flex; align-items: flex-start; padding-top: 15px; flex-wrap: wrap;">
       <div class="image-content" style="flex: 0 0 auto; margin-right: 20px; width: 200px;">
-         <img src="thumbs/Photo_Ruofan_edited.jpg"  style="height:80%; width: 150px;" alt="Ruofan Wu" style="margin-top: 0;"/>
+         <img src="thumbs/Photo_Ruofan_edited.jpg"   alt="Ruofan Wu" style="width: 100%; height: auto;"/>
       </div>
       <div class="text-content" style="flex: 1;">
-         <h4 style="text-align: left; margin-top: 0;font-weight: normal; font-size: 18px; margin-left: 50px;">· Ruofan WU 吳若繁 (Research Assistant, 2022-2023)</h4>
-         <p style="text-align: justify; margin-left: 60px;">Ruofan is currently a Ph.D student at the Hong Kong Polytechnic University.</p>
+         <h4 style="text-align: left; margin-top: 0;font-weight: normal; font-size: 18px;">· Ruofan WU 吳若繁 (Research Assistant, 2022-2023)</h4>
+         <p style="text-align: justify; ">Ruofan is currently a Ph.D student at the Hong Kong Polytechnic University.</p>
       </div>
    </div>
    <div class="row-fluid">
