--- a/people.html
+++ b/people.html
@@ -330,7 +330,7 @@
    </div>
    <div class="row-fluid" style="display: flex; align-items: flex-start; padding-top: 15px; flex-wrap: wrap;">
       <div class="image-content" style="flex: 0 0 auto; margin-right: 20px; width: 200px;">
-         <img src="thumbs/Photo_Cindy.png"  alt="Cindy, Rui JIN" style="width: 100%; height: auto;"/>
+         <img src="thumbs/Photo_Cindy.png"  alt="Cindy, Rui JIN" style="width: 100%; height: 70%;"/>
       </div>
       <div class="text-content" style="flex: 1;">
          <h4 style="text-align: left; margin-top: 0; font-weight: normal; font-size: 18px;">· Cindy, Rui JIN 金蕊 (Senior Research Assistant, 2021-2022)</h4>
@@ -339,7 +339,7 @@
    </div>
    <div class="row-fluid" style="display: flex; align-items: flex-start; padding-top: 15px; flex-wrap: wrap;">
       <div class="image-content" style="flex: 0 0 auto; margin-right: 20px; width: 200px;">
-         <img src="thumbs/Photo_Ruofan_edited.jpg"   alt="Ruofan Wu" style="width: 100%; height: auto;"/>
+         <img src="thumbs/Photo_Ruofan_edited.jpg"   alt="Ruofan Wu" style="width: 100%; height: 70%;"/>
       </div>
       <div class="text-content" style="flex: 1;">
          <h4 style="text-align: left; margin-top: 0;font-weight: normal; font-size: 18px;">· Ruofan WU 吳若繁 (Research Assistant, 2022-2023)</h4>
@@ -349,7 +349,7 @@
    <div class="row-fluid">
       <div class="span3">
          <!-- Placeholder for consistency -->
-         <div style="width: 70px; height: 100px;"></div>
+         <div style="width: 50px; height: 100px;"></div>
       </div>
       <br>
       <div class="span9 offset">
