--- a/people.html
+++ b/people.html
@@ -348,10 +348,10 @@
    </div>
    <div class="row-fluid">
       <div class="text-content" style="flex: 1;">
-         <p style="text-align: left; line-height: 1.6; margin-left: 10px">· Yuxin ZHU (MGCS Research Assistant, 2021-2022)</p>
-         <p style="text-align: left; line-height: 1.6;">· Martin, Yu Ting LEE (RPG Research Assistant, 2021)</p>
-         <p style="text-align: left; line-height: 1.6;">· Minzhi GONG (Research Assistant,  2020)</p>
-         <p style="text-align: left; line-height: 1.6;">· Weijie TAN (Research Assistant,  2019)</p>
+         <p style="text-align: left; line-height: 1.6; margin-left: 100px; margin-top:20px;">· Yuxin ZHU (MGCS Research Assistant, 2021-2022)</p>
+         <p style="text-align: left; line-height: 1.6; margin-left: 120px; margin-top:30px;">· Martin, Yu Ting LEE (RPG Research Assistant, 2021)</p>
+         <p style="text-align: left; line-height: 1.6;margin-left: 150px; margin-top:30px;">· Minzhi GONG (Research Assistant,  2020)</p>
+         <p style="text-align: left; line-height: 1.6;margin-left: 200px; margin-top:30px;">· Weijie TAN (Research Assistant,  2019)</p>
    </div>
    </div>
    <div class="row-fluid">
