--- a/people.html
+++ b/people.html
@@ -339,7 +339,7 @@
    </div>
    <div class="row-fluid" style="display: flex; align-items: flex-start; padding-top: 15px; flex-wrap: wrap;">
       <div class="image-content" style="flex: 0 0 auto; margin-right: 20px; width: 200px;">
-         <img src="thumbs/Photo_Ruofan_edited.jpg"   alt="Ruofan Wu" style="width: 100%; height: 70%;"/>
+         <img src="thumbs/Photo_Ruofan_edited.jpg"   alt="Ruofan Wu" style="width: 100%; height: auto;"/>
       </div>
       <div class="text-content" style="flex: 1;">
          <h4 style="text-align: left; margin-top: 0;font-weight: normal; font-size: 18px;">· Ruofan WU 吳若繁 (Research Assistant, 2022-2023)</h4>
@@ -354,7 +354,7 @@
          <p style="text-align: left; line-height: 1.6;margin-left: 220px; margin-top:20px;">· Weijie TAN (Research Assistant,  2019)</p>
    </div>
    </div>
-	<script>
+<script>
   // JavaScript动态调整样式
   const updateContentLayout = () => {
     const isSmallScreen = window.innerWidth <= 768; // 判断屏幕宽度是否小于等于768px
