--- a/people.html
+++ b/people.html
@@ -116,7 +116,7 @@
 	<h3 style="margin: 30px;">Current Team Members</h3>
 	</div>
 <!-- 外部容器，确保页面内容不会超过指定宽度 -->
-<div class="container" style="width: 60%; height: 60%; margin: 0 auto;">
+<div class="container" id="carousel-container" style="width: 60%; height: 60%; margin: 0 auto;">
    <!-- 轮播图 -->
    <div class="row-fluid">
       <div class="span10">
@@ -129,71 +129,19 @@
                      <p>2022 Farewell Lunch</p>
                   </div>
                </div>
-
                <div class="item">
                   <img src="files/Photo2.png" class="carousel-image" alt="">
                   <div class="carousel-caption">
                      <p>2022 Team meeting</p>
                   </div>
                </div>
-
                <div class="item">
                   <img src="files/ICPhS 2023.jpg" class="carousel-image" alt="">
                   <div class="carousel-caption">
                      <p>ICPhS 2023 at Prague</p>
                   </div>
                </div>
-
-               <div class="item">
-                  <img src="files/IMG_3902.jpg" class="carousel-image" alt="">
-                  <div class="carousel-caption">
-                     <p>2023 Gathering</p>
-                  </div>
-               </div>
-
-               <div class="item">
-                  <img src="files/Photo_TAI2023.jpeg" class="carousel-image" alt="">
-                  <div class="carousel-caption">
-                     <p>TAI 2023 at Singapore</p>
-                  </div>
-               </div>
-
-               <div class="item">
-                  <img src="files/Photo_AmLap.jpeg" class="carousel-image" alt="">
-                  <div class="carousel-caption">
-                     <p>AMLaP Asia 2023 at CUHK</p>
-                  </div>
-               </div>
-
-               <div class="item">
-                  <img src="files/Photo_2024 Spring gathering.jpg" class="carousel-image" alt="">
-                  <div class="carousel-caption">
-                     <p>2024 Spring Gathering</p>
-                  </div>
-               </div>
-
-               <div class="item">
-                  <img src="files/Photo_186th Meeting of ASA in Canada.jpg" class="carousel-image" alt="">
-                  <div class="carousel-caption">
-                     <p>186th Meeting of ASA in Canada 2024</p>
-                  </div>
-               </div>
-
-               <div class="item">
-                  <img src="files/Photo_Yuqi's MPhil thesis defense.jpg" class="carousel-image" alt="">
-                  <div class="carousel-caption">
-                     <p>2024 Yuqi's MPhil thesis defense</p>
-                  </div>
-               </div>
-		    
-               <div class="item">
-                  <img src="files/SNL 2024 in Brisbane.jpg" class="carousel-image" alt="">
-                  <div class="carousel-caption">
-                     <p>SNL 2024 in Brisbane</p>
-                  </div>
-               </div>
                <!-- 其他项目继续... -->
-
             </div>
             <a class="left carousel-control" href="#main-carousel" data-slide="prev">‹</a>
             <a class="right carousel-control" href="#main-carousel" data-slide="next">›</a>
@@ -201,6 +149,26 @@
       </div>
    </div>
 </div>
+
+<script>
+   function adjustCarouselSize() {
+      const container = document.getElementById('carousel-container');
+      const width = window.innerWidth;
+
+      if (width < 768) { // 小屏幕
+         container.style.width = '90%';
+         container.style.height = 'auto';
+      } else { // 大屏幕
+         container.style.width = '60%';
+         container.style.height = '60%';
+      }
+   }
+
+   // 页面加载和窗口大小变化时动态调整
+   window.addEventListener('DOMContentLoaded', adjustCarouselSize);
+   window.addEventListener('resize', adjustCarouselSize);
+</script>
+
 </div>
 
 
