--- a/people.html
+++ b/people.html
@@ -176,10 +176,10 @@
 
 <section id="staff">
    <div class="row-fluid" style="display: flex; align-items: flex-start; padding-top: 20px; flex-wrap: wrap;">
-      <div class="image-content" style="flex: 0 0 auto; margin-right: 10px; width: 200px;">
+      <div class="image-content" style="flex: 0 0 auto; margin-right: 20px; width: 200px;">
          <img src="thumbs/Photo_Quentin.jpeg" alt="Quentin Zhen QIN" style="width: 100%; height: auto;"/ >
       </div>
-      <div class="text-content" style="flex: 1; margin-bottom: 10px; margin-left:0px">
+      <div class="text-content" style="flex: 1; margin-bottom: 10px;">
          <h4 style="text-align: left; margin-top: 0;">Quentin Zhen QIN 秦震 Ph.D.</h4>
 	 <p style="font-size: 18px; margin-bottom: 5px;" ><b>Principal Investigator</b></p>
 	 <p style="font-size: 18px; margin-top: 5px; margin-bottom: 5px;" >hmzqin@ust.hk; <a href="files/C.V._Zhen Qin_Research.pdf">CV</a></p>
