--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
              line-height: 1.6;
          }
          a {
-             color: #5048D3;
+             color: #6555C2;
          }
          a:hover {
-             color: #5048D3; /* Optional: Set a different color when hovering */
+             color: #6555C2; /* Optional: Set a different color when hovering */
          }
          ol {
             display: block;
