--- a/media.html
+++ b/media.html
@@ -246,6 +246,16 @@
          	 <div class="page-header">
           	   <h3>Media</h3>
          	 </div>
+		<div class="row-fluid">
+  	 	  <div class="span3">
+   		   <img src="files/Media 6.jpg" alt="media_nap.jpg" />
+  		  </div>
+   		 <div class="span9">
+   		   <p><a href="https://aging.hkust.edu.hk/events/research-back-back-seminar-series-6" style="color: #515151;"><b>[Nov 2024] Research Back to Back Seminar Series</a></b></p>
+    		  <i><a href="https://aging.hkust.edu.hk/" style="color: #515151;">Center for Aging Science, HKUST</i>
+    		 </div>
+ 		 </div>
+		 <hr>
 		       
 		<div class="row-fluid">
   	 	  <div class="span3">
