--- a/people.html
+++ b/people.html
@@ -445,6 +445,7 @@
          <h4 style="text-align: left; margin-top: 0; ">Kangdi LIU 劉康迪 (BA: NENU; MA: Nankai)</h4>
 	 <p style="font-size: 18px; margin-bottom: 5px; "><b>MPhil Student</b></p>
 	 <p style="font-size: 18px; margin-top: 5px; margin-bottom: 5px; ">kliubc@connect.ust.hk; <a href="https://www.researchgate.net/profile/Kangdi-Liu">ResearchGate</a>, <a href="files/CV_Kangdi_new.pdf">CV</a></p>
+	 <p style="font-size: 18px; margin-bottom: 5px; "><a href="https://kliubc23.github.io/">Personal Website</a></p>
 	 <p style="font-size: 18px; margin-top: 5px; ">ORCID ID: <a href="https://orcid.org/0009-0008-1548-4040​">https://orcid.org/0009-0008-1548-4040​</a></p>
          <p style="text-align: justify;">Kangdi graduated from Nankai University with a master's degree in Linguistics and Applied Linguistics. She is interested in phonetics and psycholinguistics, especially focusing on Chinese tones. Her past project studied tone variation and change in the Chinese dialects/languages. At present, she is working on the beneficial effect of prior knowledge on older adults’ memory consolidation in nonnative tone learning.</p>
       </div>
