--- a/people.html
+++ b/people.html
@@ -361,17 +361,7 @@
       </div>
    </div>
 <hr>
-   <div class="row-fluid" style="display: flex; align-items: flex-start; padding-top: 20px; flex-wrap: wrap;">
-      <div class="image-content" style="flex: 0 0 auto; margin-right: 20px; width: 200px;">
-         <img src="thumbs/Photo_Susu.jpg" alt="Susu Lai" style="width: 100%; height: auto;"/ >
-      </div>
-      <div class="text-content" style="flex: 1; margin-bottom: 10px;">
-         <h4 style="text-align: left; margin-top: 0;">Susu LAI 賴素素 (BA: Hunan U; MA: HKU)</h4>
-	 <p style="font-size: 18px; margin-bottom: 5px;" ><b>Research Assistant</b></p>
-	 <p style="font-size: 18px; margin-top: 5px;" >hmsusu@ust.hk; <a href="https://www.researchgate.net/profile/Susu-Lai">ResearchGate</a>, <a href="files/CV_Susu LAI.pdf">CV</a></p>
-         <p style="text-align: justify;">Susu graduated from the University of Hong Kong with an MA degree in Linguistics. She has a strong interest in psycholinguistics, specifically understanding how individuals acquire and process the prosodic features of a second language. In her previous research project, she explored implicit learning of lexical stress in second language acquisition. She is currently involved in an EEG study on L2 learners' consolidation of Cantonese tones during daytime naps.</p>
-      </div>
-   </div>
+
 	<script>
 	  // JavaScript动态调整样式
 	  const updateContentLayout = () => {
@@ -476,6 +466,10 @@
       <div class="text-content" style="flex: 1;">
          <h4 style="text-align: left; margin-top: 0; font-weight: normal; font-size: 18px;">· Ruofan WU 吳若繁 (Research Assistant, 2022-2023)</h4>
          <p style="text-align: justify;">Ruofan is currently a Ph.D student at the Hong Kong Polytechnic University.</p>
+      </div>
+      <div class="text-content" style="flex: 1;">
+         <h4 style="text-align: left; margin-top: 0; font-weight: normal; font-size: 18px;">· Susu LAI 賴素素 (Research Assistant, 2023-2024)</h4>
+         <p style="text-align: justify;">Susu is currently a lecturer at Guangzhou College of Technology and Business.</p>
       </div>
    </div>
    <div class="row-fluid alumni-entry" style="padding-top: 15px;">
